<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipeAddIngredientFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_input_ingredient_add_layout_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:helperText="Required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView

            android:id="@+id/recipe_input_ingredient_add_auto_complete_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:hint="Select Ingredient"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_input_ingredient_add_layout_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:helperText="Required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_input_ingredient_add_layout_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_input_ingredient_add_edit_text_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Amount"
            android:inputType="numberDecimal"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_input_ingredient_add_layout_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:helperText="Required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_input_ingredient_add_layout_amount"
        style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">


        <AutoCompleteTextView

            android:id="@+id/recipe_input_ingredient_add_auto_complete_units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:hint="Select Unit"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:ignore="HardcodedText" />
<!--        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
<!--            android:id="@+id/recipe_input_ingredient_new_unit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="Add Unit"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/white"-->
<!--            android:backgroundTint="@color/primaryColor"-->
<!--            />-->
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_input_ingredient_add_layout_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_input_ingredient_add_layout_unit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_input_ingredient_add_edit_text_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Category"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

