<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/recipe_add_done"
        android:icon="@drawable/ic_check_24"
        android:title="ADD"
        app:showAsAction="ifRoom" />

</menu>