<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/recipe_detail_edit"
        android:icon="@drawable/ic_edit_24"
        android:title="EDIT"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/recipe_detail_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="DELETE"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />


</menu>